add GitConfig support, clean up logging, and refactor orchestrators for better modularity. also removed some important bugs, like passing results instead of enriched in Main